# fmtstruct

./: Cargo.toml  README.md  clay-config.json
examples/: basic.rs
src/: error.rs  lib.rs
src/format/: json.rs  mod.rs  postcard.rs  toml.rs  yaml.rs
src/loader/: dyn_loader.rs  mod.rs  static_loader.rs
src/source/: file.rs  memory.rs  mod.rs
tests/: format_tests.rs  loader_tests.rs  preprocess_tests.rs  source_tests.rs  validation_tests.rs
