[package]
name = "fmtstruct"
license = "MIT"
version = "0.0.1"
edition = "2024"
rust-version = "1.93"
categories = ["asynchronous", "config", "parsing"]
description = "A format-agnostic configuration loader, parser, and validator."
keywords = ["configuration", "loader", "parser"]
readme = "README.md"
repository = "https://github.com/canmi21/fmtstruct.git"

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
serde_yaml = { version = "0.9", optional = true }
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["fs"], optional = true }
toml = { version = "0.9", optional = true }
validator = { version = "0.20", features = ["derive"] }

[features]
default = []
full = ["fs", "toml", "yaml", "json"]
fs = ["dep:tokio"]
toml = ["dep:toml"]
yaml = ["dep:serde_yaml"]
json = ["dep:serde_json"]

[dev-dependencies]